<resources>
    <string name="app_name">PAT Track</string>
    <string-array name="buses">
        <item color="#3300cc">1</item>
        <item color="#ff33cc">2</item>
        <item color="#cc6666">4</item>
        <item color="#ffcc33">6</item>
        <item color="#336666">7</item>
        <item color="#98fb98">8</item>
        <item color="#ffccff">11</item>
        <item color="#cc00cc">12</item>
        <item color="#ff6666">13</item>
        <item color="#f4a460">14</item>
        <item color="#ff6633">15</item>
        <item color="#fa8072">16</item>
        <item color="#ff3300">17</item>
        <item color="#bc8f8f">18</item>
        <item color="#00ff66">19L</item>
        <item color="#00cc00">20</item>
        <item color="#99cc00">21</item>
        <item color="#00ff00">22</item>
        <item color="#009900">24</item>
        <item color="#006666">26</item>
        <item color="#009999">27</item>
        <item color="#b22222">28X</item>
        <item color="#0066cc">29</item>
        <item color="#00cccc">31</item>
        <item color="#ff6699">36</item>
        <item color="#ff99cc">38</item>
        <item color="#ffcccc">39</item>
        <item color="#ff99ff">40</item>
        <item color="#0099cc">41</item>
        <item color="#0288d1">42</item>
        <item color="#ff9966">43</item>
        <item color="#ffcc00">44</item>
        <item color="#ff0066">48</item>
        <item color="#cc3300">51</item>
        <item color="#3300ff">51L</item>
        <item color="#9966cc">52L</item>
        <item color="#ff9999">53</item>
        <item color="#ff9900">53L</item>
        <item color="#ff1493">54</item>
        <item color="#999933">55</item>
        <item color="#ff0000">56</item>
        <item color="#cc0066">57</item>
        <item color="#00ff99">58</item>
        <item color="#99ff00">59</item>
        <item color="#999900">60</item>
        <item color="#e0ffff">61A</item>
        <item color="#afeeee">61B</item>
        <item color="#00ffff">61C</item>
        <item color="#7fffd4">61D</item>
        <item color="#cc6633">64</item>
        <item color="#cc3399">65</item>
        <item color="#00cc66">67</item>
        <item color="#00cc99">68</item>
        <item color="#99ff33">69</item>
        <item color="#666699">71</item>
        <item color="#dc143c">71A</item>
        <item color="#ffa07a">71B</item>
        <item color="#f08080">71C</item>
        <item color="#cd5c5c">71D</item>
        <item color="#ff33ff">74</item>
        <item color="#669933">75</item>
        <item color="#0099ff">77</item>
        <item color="#993366">78</item>
        <item color="#ff9933">79</item>
        <item color="#ff66cc">81</item>
        <item color="#ffd700">82</item>
        <item color="#00ff33">83</item>
        <item color="#0000ff">86</item>
        <item color="#ff69b4">87</item>
        <item color="#0066ff">88</item>
        <item color="#ccff00">89</item>
        <item color="#3366ff">91</item>
        <item color="#ffb6c1">93</item>
        <item color="#008000">G2</item>
        <item color="#7cfc00">G3</item>
        <item color="#32cd32">G31</item>
        <item color="#ff6600">O1</item>
        <item color="#ff7f50">O5</item>
        <item color="#ff8c00">O12</item>
        <item color="#9900ff">P1</item>
        <item color="#9933cc">P2</item>
        <item color="#cc00ff">P3</item>
        <item color="#9933ff">P7</item>
        <item color="#9932cc">P10</item>
        <item color="#ff00ff">P12</item>
        <item color="#cc33cc">P13</item>
        <item color="#cc0000">P16</item>
        <item color="#990033">P17</item>
        <item color="#993399">P67</item>
        <item color="#ff0099">P68</item>
        <item color="#ff66ff">P69</item>
        <item color="#6666ff">P71</item>
        <item color="#6600ff">P76</item>
        <item color="#6633ff">P78</item>
        <item color="#d50000">RED2</item>
        <item color="#ffff33">Y1</item>
        <item color="#ffff99">Y45</item>
        <item color="#ffff00">Y46</item>
        <item color="#ffffcc">Y47</item>
        <item color="#ffff66">Y49</item>
    </string-array>
    <string-array name="buscolors">
        <item name="1">#3300cc</item>
        <item name="2">#ff33cc</item>
        <item name="4">#cc6666</item>
        <item name="6">#ffcc33</item>
        <item name="7">#336666</item>
        <item name="8">#98fb98</item>
        <item name="11">#ffccff</item>
        <item name="12">#cc00cc</item>
        <item name="13">#ff6666</item>
        <item name="14">#f4a460</item>
        <item name="15">#ff6633</item>
        <item name="16">#fa8072</item>
        <item name="17">#ff3300</item>
        <item name="18">#bc8f8f</item>
        <item name="19L">#00ff66</item>
        <item name="20">#00cc00</item>
        <item name="21">#99cc00</item>
        <item name="22">#00ff00</item>
        <item name="24">#009900</item>
        <item name="26">#006666</item>
        <item name="27">#009999</item>
        <item name="28X">#b22222</item>
        <item name="29">#0066cc</item>
        <item name="31">#00cccc</item>
        <item name="36">#ff6699</item>
        <item name="38">#ff99cc</item>
        <item name="39">#ffcccc</item>
        <item name="40">#ff99ff</item>
        <item name="41">#0099cc</item>
        <item name="42">#0288d1</item>
        <item name="43">#ff9966</item>
        <item name="44">#ffcc00</item>
        <item name="48">#ff0066</item>
        <item name="51">#cc3300</item>
        <item name="51L">#3300ff</item>
        <item name="52L">#9966cc</item>
        <item name="53">#ff9999</item>
        <item name="53L">#ff9900</item>
        <item name="54">#ff1493</item>
        <item name="55">#999933</item>
        <item name="56">#ff0000</item>
        <item name="57">#cc0066</item>
        <item name="58">#00ff99</item>
        <item name="59">#99ff00</item>
        <item name="60">#999900</item>
        <item name="61A">#e0ffff</item>
        <item name="61B">#afeeee</item>
        <item name="61C">#00ffff</item>
        <item name="61D">#7fffd4</item>
        <item name="64">#cc6633</item>
        <item name="65">#cc3399</item>
        <item name="67">#00cc66</item>
        <item name="68">#00cc99</item>
        <item name="69">#99ff33</item>
        <item name="71">#666699</item>
        <item name="71A">#dc143c</item>
        <item name="71B">#ffa07a</item>
        <item name="71C">#f08080</item>
        <item name="71D">#cd5c5c</item>
        <item name="74">#ff33ff</item>
        <item name="75">#669933</item>
        <item name="77">#0099ff</item>
        <item name="78">#993366</item>
        <item name="79">#ff9933</item>
        <item name="81">#ff66cc</item>
        <item name="82">#ffd700</item>
        <item name="83">#00ff33</item>
        <item name="86">#0000ff</item>
        <item name="87">#ff69b4</item>
        <item name="88">#0066ff</item>
        <item name="89">#ccff00</item>
        <item name="91">#3366ff</item>
        <item name="93">#ffb6c1</item>
        <item name="G2">#008000</item>
        <item name="G3">#7cfc00</item>
        <item name="G31">#32cd32</item>
        <item name="O1">#ff6600</item>
        <item name="O5">#ff7f50</item>
        <item name="O12">#ff8c00</item>
        <item name="P1">#9900ff</item>
        <item name="P2">#9933cc</item>
        <item name="P3">#cc00ff</item>
        <item name="P7">#9933ff</item>
        <item name="P10">#9932cc</item>
        <item name="P12">#ff00ff</item>
        <item name="P13">#cc33cc</item>
        <item name="P16">#cc0000</item>
        <item name="P17">#990033</item>
        <item name="P67">#993399</item>
        <item name="P68">#ff0099</item>
        <item name="P69">#ff66ff</item>
        <item name="P71">#6666ff</item>
        <item name="P76">#6600ff</item>
        <item name="P78">#6633ff</item>
        <item name="RED2">#ffd50000</item>
        <item name="Y1">#ffff33</item>
        <item name="Y45">#ffff99</item>
        <item name="Y46">#ffff00</item>
        <item name="Y47">#ffffcc</item>
        <item name="Y49">#ffff66</item>
    </string-array>
    <string name="action_clear">Clear Transit</string>
    <string name="action_select_buses">Select Buses</string>
    <string name="action_about">About</string>
    <string name="app_info">App Info</string>
    <string name="title_activity_about">About</string>
    <string name="facebook">Facebook</string>
    <string name="github">GitHub</string>
    <string name="email">Email</string>
    <string name="disclaimerBody">We are not responsible for which buses and routes are being
        tracked as we are only getting the information from Port Authority. If a certain route or
        bus is not on our app, this is most likely not our fault but of Port Authority. If the map
        is empty, please report this to our Play Store email or create an issue on our Github above
        immediately.
    </string>
    <string name="detour_info">Detour Information</string>
</resources>