<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_select_buses"
        android:title="@string/action_select_buses"
        android:orderInCategory="100"
        appcompat:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="200"
        appcompat:showAsAction="never" />
    <item android:id="@+id/detour_info"
        android:title="@string/detour_info"
        android:orderInCategory="300"
        appcompat:showAsAction="never"
        android:onClick="onClickDetourInfo"/>
    <item android:id="@+id/clear_cache"
        android:title="@string/clear_cache"
        android:orderInCategory="400"
        appcompat:showAsAction="never"
        android:onClick="onClearCache"/>
    <item android:id="@+id/action_appdetails"
        android:title="@string/app_info"
        android:orderInCategory="500"
        appcompat:showAsAction="never"
        android:onClick="onClickAppDetails"/>

</menu>
